--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "minecraft-cape-creator": "^0.0.7",
+    "minecraft-skin-viewer": "^0.0.7",
     "vite": "^5.3.1"
   }
 }
