--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "minecraft-skin-viewer": "^0.0.7",
-    "vite": "^5.3.1",
+    "vite": "^5.3.1"
+  },
+  "dependencies": {
     "vue": "^3.4.31",
     "vue-cropperjs": "^5.0.0"
   }
