--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build-cf": "vite --config vite-cf.config.js build",
-    "preview": "vite preview"
+    "build:preview": "vite --config vite-preview.config.js build"
   },
   "devDependencies": {
-    "minecraft-skin-viewer": "^0.0.11",
+    "minecraft-skin-viewer": "^0.0.12",
     "vite": "^7.1.9"
   }
 }
